Fixing themese, still has a bug on ios with changin the button size ( I think it is becasue of the two button css properties conflicting )

--- a/www/css/bigbuttonsStyle.css
+++ b/www/css/bigbuttonsStyle.css
@@ -1,4 +1,4 @@
-
+/*
 #buttonBar{
 
   font-size: 30px;
@@ -19,14 +19,14 @@ white-space: normal;
 
   font: white;
   white-space: normal;
-}
+}*/
 
-.button{
+/*.button{
       font-size: 30px;
       white-space: normal;
-}
+}*/
 
-.buttonRange{
+#buttonRange{
 
   visibility: visible;
 }
